Fixed z-index on the account dropdown, so it shows when you click on account at homepage. Fixed styling issues at myrentals in mobile display.

--- a/src/components/Account/MyRentals/MyRentalsCarDisplay/MyRentalsCarDisplay.css
+++ b/src/components/Account/MyRentals/MyRentalsCarDisplay/MyRentalsCarDisplay.css
@@ -47,8 +47,8 @@
   flex-direction: row;
   align-self: flex-start;
   justify-content: space-between;
-  
 }
+
 .rentals-car-display-card .car-details {
   display: flex;
   flex-direction: column;
@@ -183,11 +183,13 @@
   color: white;
 }
 
-@media screen and (max-width: 1148px) {
+@media screen and (max-width: 900px) {
   .rentals-car-display-card {
     flex-direction: column;
     align-items: center;
   }
+
+  
   .rentals-car-display-card .car-background {
     display: none !important;
   }
@@ -202,9 +204,19 @@
   overflow-y: none;
   } 
  .rentals-car-display-card .save-discard-buttons {
-    flex-direction: column;
+    flex-direction: row;
   }
   .rentals-car-display-card .save-discard-buttons button {
     margin: 5px 0;
   }
+
+
+  .rentals-car-display-card .car-display-info {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-self: flex-start;
+  justify-content: space-between;
+  
+}
 }
